# sal_stm32

./: .gitignore  Cargo.toml  cfg.toml  cfg.toml.example  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
src/libs/: gps_task.rs  mod.rs
src/tasks/: dbg_task.rs  gps_task.rs  led_task.rs  mod.rs  pwm_task.rs  rc_task.rs  uart_task.rs
src/utils/: config.rs  init.rs  macros.rs  mod.rs
