[package]
name    = "sal_stm32"
version = "0.1.0"
edition = "2024"

autobenches  = false
autoexamples = false
autotests    = false
publish      = false


[dependencies.embassy-stm32]
version  = "0.2"
features = ["memory-x", "stm32f103c8", "time-driver-tim3"]


[dependencies]
defmt     = "0.3"
defmt-rtt = "0.4"
toml-cfg  = "0.2"

panic-probe  = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt  = { version = "0.7", features = ["device"] }
embassy-time = { version = "0.4", features = ["tick-hz-72_000_000"] }
# embassy-time = { version = "0.4", features = [] }

[dependencies.cortex-m]
version  = "0.7"
features = ["critical-section-single-core", "linker-plugin-lto"]
[dependencies.embassy-executor]
version  = "0.7"
features = ["arch-cortex-m", "executor-thread", "task-arena-size-1024"]


[profile]
release.debug = true
release.lto   = true

[profile.dev.package]
cortex-m.opt-level         = 3
cortex-m-rt.opt-level      = 3
embassy-executor.opt-level = 3
embassy-time.opt-level     = 3
embassy-stm32.opt-level    = 3
