[package]
name    = "sal_stm32"
version = "0.1.0"
edition = "2024"

autobenches  = false
autoexamples = false
autotests    = false
publish      = false


[dependencies]


defmt        = "0.3"
defmt-rtt    = "0.4"
toml-cfg     = "0.2"
static_cell  = "2.1"
embassy-sync = "0.6"

panic-probe  = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt  = { version = "0.7", features = ["device"] }
embassy-time = { version = "0.4", features = ["tick-hz-32_768"] }


[dependencies.cortex-m]
version  = "0.7"
features = ["critical-section-single-core", "linker-plugin-lto"]
[dependencies.embassy-executor]
version  = "0.7"
features = ["arch-cortex-m", "executor-thread", "task-arena-size-1024"]
[dependencies.embassy-stm32]
version  = "0.2"
features = ["defmt", "memory-x", "time-driver-any", "stm32f103c8"]


[profile]
release.debug = true
release.lto   = true

[profile.dev.package]
cortex-m.opt-level         = 3
cortex-m-rt.opt-level      = 3
embassy-executor.opt-level = 3
embassy-time.opt-level     = 3
embassy-stm32.opt-level    = 3
